<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/relative_layout_padding">


        <TextView
            android:id="@+id/tv_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_mass"
            android:layout_alignBottom="@+id/et_mass"
            android:layout_alignParentStart="true"
            android:text="@string/mass"
            android:textSize="@dimen/default_text_size" />


        <EditText
            android:id="@+id/et_mass"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_mass_unit"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_mass"
            android:layout_alignParentEnd="true"
            android:dropDownWidth="50dp"
            android:entries="@array/unit_array_mass" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_height"
            android:layout_alignBottom="@+id/et_height"
            android:layout_alignParentStart="true"

            android:text="@string/height"
            android:textSize="@dimen/default_text_size" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_mass"
            android:layout_centerHorizontal="true"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_height_unit"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_height"
            android:layout_alignParentEnd="true"
            android:dropDownWidth="50dp"
            android:entries="@array/unit_array_height" />

        <Button
            android:id="@+id/btn_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_height"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/count" />

        <TextView
            android:id="@+id/tv_bmi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_count"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/bmi_colon"
            android:textSize="@dimen/default_text_size"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_bmi_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_bmi_label"
            android:layout_marginTop="@dimen/default_margin"
            android:textAlignment="center"
            android:textSize="@dimen/bmi_value_text_size" />

        <TextView
            android:id="@+id/tv_bmi_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bmi_value"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:textAlignment="center"
            android:textSize="@dimen/default_text_size" />


    </RelativeLayout>
</ScrollView>
